--- a/PRAK 12/soal_2/index.html
+++ b/PRAK 12/soal_2/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <title>2373003 Revel</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
